--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mobile_Operator_DB?useSSL=fals
 spring.datasource.username=root
 spring.datasource.password=newpass
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
