--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mobile_Operator_DB?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mobile_operator_DB?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=newpass
 spring.jpa.hibernate.ddl-auto=create
